--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="py-5 absolute left-0 top-0 w-full z-[999]">
         <div class="container">
             <div class="flex justify-between">
-                <h1 class="text-4xl">UNYIL</h1>
+                <h1 class="text-4xl">DILLS</h1>
                 <div>
                     <ul class="flex gap-10">
                         <ul id="navigation" class="gap-10 hidden flex lg:flex">
@@ -39,7 +39,7 @@
                 <div class="">
                     <h1 class="lg:text-5xl text-2xl mb-7 transition" id="nama-laptop">Unyil 15 - A15</h1>
                     <p class="max-w-lg text-slate-500 transition" id="deskripsi-laptop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure fugiat sequi repellat inventore! Inventore natus error officia dicta delectus quod laudantium voluptatum nulla? Quibusdam, aut odio vel sunt fugiat facere.</p>
-                    <h2 class="my-7 font-semibold text-xl transition" id="harga-laptop">Rp. 16.502.850</h2>
+                    <h2 class="my-7 font-semibold text-xl transition" id="harga-laptop">Rp. 17.502.850</h2>
                     <button class="btn-gray">Add To Cart</button>
                     <div class="absolute left-24 bottom-4 flex gap-2">
                         <button class="btn-circle" id="previousButton"><i class="fa-solid fa-chevron-left"></i></button>
